// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sort-media should handle non-existent parent 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`sort-media should sort media items 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
